--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -92,6 +92,27 @@
       .margin(12px, r);
     }
   }
+  &-refund {
+    &-title {
+      &-box {
+        .flex(center, flex-start, row);
+      }
+      width: 100%;
+      .flex(center, space-between, row);
+      .padding(26px, lr);
+      .margin(36px, tb);
+      &-text {
+        font-size:30px;
+        color:rgba(102,102,102,1);
+      }
+      &-icon {
+        .margin(10px, r);
+        width:28px;
+        height:28px;
+        .bg;
+      }
+    }
+  }
   &-list {
     height: 100%;
     // border-top: #E3E3E3 solid 1px;
