--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2020-01-09 16:21:08
+ * @Last Modified time: 2020-03-09 15:10:11
  */
 
 // 主色调
@@ -105,6 +105,12 @@
     transform: scaleY(0.5);
     border-bottom: 1px solid #e3e3e3;
   }
+}
+
+.bg {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center center;
 }
 
 .flex (@alignItems: flex-start, @justifyContent: flex-start, @flexDirection: row) {
