--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -63,4 +63,92 @@
       font-size: 50px;
     }
   }
+
+
+  &-status {
+    &-bg {
+      width: 100%;
+      height: 142px;
+      background-color: @theme-color;
+    }
+
+    &-card {
+      .margin(30px, l);
+      .margin(-130px, t);
+      width:690px;
+      height:256px;
+      border-radius:10px;
+      .bg;
+      display: flex;
+      flex-direction: column;
+      .padding(38px, tb);
+      .padding(30px, lr);
+    }
+    &-title {
+      font-size:52px;
+      line-height: 1;
+      color:rgba(51,51,51,1);
+    }
+    &-tip {
+      font-size:28px;
+      color:rgba(51,51,51,1);
+      line-height: 1;
+      .margin(20px, t);
+    }
+    &-button {
+      width:168px;
+      height:52px;
+      border:2px solid rgba(42,134,252,1);
+      border-radius:23px;
+      .flex(center, center);
+      font-size:26px;
+      font-weight:500;
+      color:rgba(42,134,252,1);
+      line-height: 1;
+      .margin(36px, t);
+    }
+  }
+
+  &-detail {
+    width: 690px;
+    background:rgba(255,255,255,1);
+    border-radius:10px;
+    line-height: 1;
+    .margin(30px, l);
+    .margin(23px, t);
+    &-item {
+      .flex(center, flex-start, row);
+      .padding(30px, lr);
+      .padding(20px, tb);
+    }
+    &-icon {
+      width: 50px;
+      height: 50px;
+      .margin(26px, r);
+      .bg;
+    }
+    &-box {
+      max-width: 535px;
+      display: flex;
+      flex-direction: column;
+      &-text {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+    &-title { 
+      font-size:26px;
+      color:rgba(51,51,51,1);
+    }
+    &-text {
+      font-size:26px;
+      color:rgba(153,153,153,1);
+    }
+    &-mar {
+      .margin(18px, t);
+      &-l {
+        .margin(40px, l);
+      }
+    }
+  }
 }
