--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -120,3 +120,8 @@ button {
   height: 4px !important;
   bottom: 7px !important;
 }
+
+.tabs-switch-tab-content-active {
+  color: #2A86FC !important;
+  border-color: #2A86FC !important;
+}
