--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -125,6 +125,12 @@
         top: 0 !important;
       }
     }
+    &-online {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      background: #f2f2f2;
+    }
     &-item {
       width: 100%;
       .padding(40px, l);
