* 修改 修改在线订单的status增加优惠券

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -102,4 +102,24 @@
       width: 450px !important;
     }
   }
+
+  &-coupon {
+    &-active {
+      .margin(30px, l);
+      .padding(20px, lr);
+      .margin(3px, t);
+      .flex(center, center);
+      height:38px;
+      line-height: 1;
+      background:rgba(252,78,68,1);
+      border-radius:10px;
+      font-size:26px;
+      color:rgba(255,255,255,1);
+    }
+    &-normal {
+      font-size:30px;
+      color:rgba(204,204,204,1);
+      .margin(30px, l);
+    }
+  }
 }
