优惠券 在线订单模块 加入会员是否可以使用会员价开关

--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -109,6 +109,8 @@
       &-image {
         width: 80px;
         height: 80px;
+        border-radius: 40px;
+        .bg;
         .margin(20px, r);
       }
       &-detail {
@@ -193,6 +195,8 @@
     &-avator {
       width: @member-avator-size;
       height: @member-avator-size;
+      .bg; 
+      border-radius: @member-avator-size / 2;
     }
     &-row {
       &-icons {
