--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -96,7 +96,9 @@
       display: flex;
       flex-direction: column;
       margin-top: 22px;
-
+      &-mar {
+        .margin(14px, t);
+      }
       &-status {
         height: 256px;
         padding-left: 32px;
@@ -228,6 +230,13 @@
           &-time {
             font-size:26px;
             color:rgba(102,102,102,1);
+          }
+
+          &-copy {
+            width:22px;
+            height:23px;
+            .margin(12px, l);
+            .background-image('//net.huanmusic.com/weapp/icon_copy2.png');
           }
 
           &-content {
