--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -216,6 +216,57 @@
     }
     &-card {
       .padding(30px, lr);
+      &-mar {
+        .margin(14px, t);
+      }
+    }
+
+    &-item {
+      width: 690px;
+      .padding(30px, tb);
+      .margin(20px, t);
+      background: #ffffff;
+      .padding(30px, lr);
+      border-radius:20px;
+      .flex(center, space-between, row);
+
+      &-box {
+        display: flex;
+        flex-direction: column;
+      }
+
+      &-title {
+        font-size:30px;
+        color:rgba(51,51,51,1);
+        line-height: 1;
+      }
+
+      &-text {
+        font-size:26px;
+        color:rgba(102,102,102,1);
+        line-height: 1;
+        .margin(13px, t);
+      }
+
+      &-price {
+        font-size:30px;
+        color:rgba(77,77,77,1);
+        line-height: 1;
+      }
+
+      &-extra {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
+
+      &-arrow {
+        width:13px;
+        height:24px;
+        .background-image('//net.huanmusic.com/weapp/icon_into.png');
+        .margin(17px, l);
+      }
     }
   }
+
 }
