--- a/src/pages/order/component/product.less
+++ b/src/pages/order/component/product.less
@@ -754,6 +754,12 @@
       color: rgba(51, 51, 51, 1);
     }
 
+    &-barcode {
+      font-size:24px;
+      color:rgba(153,153,153,1);
+      line-height: 1;
+    }
+
     &-corner {
       position: absolute;
       bottom: 0;
