* 修改 开单页面的会员modal加入优惠券

--- a/src/component/coupon/index.less
+++ b/src/component/coupon/index.less
@@ -197,7 +197,7 @@
 
     &-item {
       margin-top: 20px;
-      .padding(30px, l);
+      .padding(30px, lr);
       &-text-grey {
         color: #CCCCCC !important;
       }
@@ -209,7 +209,7 @@
       &-top {
         position: relative;
         .flex(center, center, row);
-        width: 690px;
+        width: 100%;
         height: 181px;
         z-index: 2;
         .bg;
@@ -251,7 +251,7 @@
         &-right {
           position: relative;
           .flex(flex-start, center, column);
-          width: 478px;
+          flex: 1;
           height: 100%;
           margin-left: 58px;
 
@@ -310,7 +310,7 @@
 
       &-bottom {
         z-index: 1;
-        width: 690px;
+        width: 100%;
         padding: 46px 27px 33px 27px;
         margin-top: -19px;
         border-radius: 10px;
