* 修改 在线订单的会员bug

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -71,6 +71,13 @@
     width: 13px;
     height: 24px;
     margin-left: 16px;
+    transition: .4s;
+    &-top {
+      transform: rotate(-90deg);
+    }
+    &-bottom {
+      transform: rotate(90deg);
+    }
   }
   &-bold {
     font-weight: bold;
