--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -187,7 +187,8 @@
     &-img {
       position: absolute;
       left: (@member-card-width - @member-avator-size) / 2;
-      top: -(@member-avator-size - 60px);
+      top: -85px;
+
       // .theme-shadow();
       // background-color: #f2f2f2;
       // border-radius: @member-avator-size / 2;
