--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -569,6 +569,7 @@
         &-icon {
           width: 40px;
           height: 40px;
+          .bg;
 
           &-img {
             width: 100%;
@@ -582,7 +583,8 @@
         }
 
         &-box {
-          width: 100%;
+          display: flex;
+          flex: 1;
           font-size: 30px;
         }
       }
