--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -494,6 +494,26 @@
       // .padding(30px, lr);
     }
 
+    &-item {
+      .flex(center, space-between, row);
+      &::before {
+        .bordertop;
+      }
+      &-box {
+        .flex(center, center, row);
+      }
+    }
+
+    &-title {
+      font-size:30px;
+      color:rgba(51,51,51,1);
+    }
+
+    &-text {
+      font-size:20px;
+      color:rgba(153,153,153,1);
+    }
+
     &-footer {
       position: fixed;
       bottom: 0;
