--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -51,6 +51,9 @@
       &-image {
         width: 100%;
         height: 100%;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center center;
       }
     }
     &-detail {
