--- a/src/pages/style/pay.less
+++ b/src/pages/style/pay.less
@@ -6,13 +6,18 @@
 @pay-receive-background-image-height: 770px;
 @pay-receive-code-size: 406px;
 @pay-font-size: 55px;
-@pay-font-color: #FC4E44;
+@pay-font-color: #fc4e44;
 @pay-receive-cash-form-width: 690px;
 
 .@{pay-prefix} {
-
   &-receive {
-    background: linear-gradient(0deg,rgba(0,0,0,1) 0%,rgba(255,255,255,1) 0%,rgba(42,134,252,1) 0%,rgba(42,134,252,1) 100%);
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 1) 0%,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(42, 134, 252, 1) 0%,
+      rgba(42, 134, 252, 1) 100%
+    );
     .flex(center, flex-start, column);
 
     &-header {
@@ -41,7 +46,7 @@
     }
     &-content {
       position: relative;
-      .background-image('//net.huanmusic.com/weapp/img_code.png');
+      .background-image("//net.huanmusic.com/weapp/img_code.png");
       width: @pay-receive-background-image-width;
       height: @pay-receive-background-image-height;
       .margin(70px, t);
@@ -105,7 +110,7 @@
       }
       &-input {
         .padding(40px, tb);
-        border-bottom: 1px solid #E3E3E3;
+        border-bottom: 1px solid #e3e3e3;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -120,6 +125,7 @@
           width: 100%;
           height: 100%;
           font-size: 50px;
+          line-height: 50px;
           color: #444444;
           font-weight: bold;
           &-placeholder {
@@ -147,7 +153,7 @@
       }
     }
   }
-  
+
   &-result {
     &-container {
       display: flex;
@@ -181,18 +187,18 @@
   &-cash {
     &-button {
       .margin(30px, t);
-      width:670px;
-      height:80px;
+      width: 670px;
+      height: 80px;
       background: #ffffff;
-      border-radius:40px;
+      border-radius: 40px;
       .flex(center, center);
-      font-size:30px;
-      font-weight:500;
+      font-size: 30px;
+      font-weight: 500;
       color: @theme-color;
 
       &-disable {
         opacity: 0.54;
-        background:rgba(204,204,204,1);
+        background: rgba(204, 204, 204, 1);
         color: #ffffff;
       }
     }
