--- a/src/pages/style/user.less
+++ b/src/pages/style/user.less
@@ -8,7 +8,7 @@
   &-bg {
     height: @user-bg-size;
     width: 100%;
-    .background-image('//net.huanmusic.com/weapp/v1/bg_mine.png');
+    .background-image("//net.huanmusic.com/weapp/v1/bg_mine.png");
   }
   &-container {
     .flex(center, flex-start, column);
@@ -39,7 +39,7 @@
       align-items: center;
     }
     &-level {
-      background-color: #64A7FE;
+      background-color: #64a7fe;
       height: 34px;
       border-radius: 17px;
       .flex(center, center);
@@ -96,7 +96,7 @@
       &-icon {
         width: 14px;
         height: 24px;
-        .background-image('//net.huanmusic.com/weapp/icon_into.png');
+        .background-image("//net.huanmusic.com/weapp/icon_into.png");
       }
     }
   }
@@ -111,14 +111,14 @@
       width: 100%;
       height: 100%;
       .padding(30px, lr);
-      font-size:30px;
-      font-weight:500;
-      color:rgba(77,77,77,1);
+      font-size: 30px;
+      font-weight: 500;
+      color: rgba(77, 77, 77, 1);
     }
     &-box {
-      width:690px;
-      background:rgba(255,255,255,1);
-      border-radius:20px;
+      width: 690px;
+      background: rgba(255, 255, 255, 1);
+      border-radius: 20px;
     }
     &-input {
       position: relative;
@@ -187,7 +187,7 @@
       .flex(center, center, column);
       &-text {
         font-size: 24px;
-        color: #BFBFBF;
+        color: #bfbfbf;
       }
     }
   }
