--- a/src/pages/style/login.less
+++ b/src/pages/style/login.less
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   &-step {
     width: 100%;
     .flex(center, center, row);
@@ -46,12 +46,16 @@
       .padding(50px, lr);
     }
     &-title {
-      font-size: 42px;
-      color: @theme-color;
-      font-weight: bold;
-      .margin(54px, b);
-      .margin(10px, t);
-      .flex(center, center);
+      width: 421px;
+      height: 53px;
+      .margin(137px - 50px, l);
+      .margin(20px, t);
+      .margin(50px, b);
+      .bg;
+      background-image: url(http://net.huanmusic.com/weapp/txt_name.png);
+      // .margin(54px, b);
+      // .margin(10px, t);
+      // .flex(center, center);
     }
     &-input {
       .margin(24px, b);
@@ -67,7 +71,7 @@
       }
       &-uncheck {
         border-radius: @check-icon-size / 2;
-        border: 1px solid #A0A0A0;
+        border: 1px solid #a0a0a0;
       }
     }
   }
@@ -75,7 +79,7 @@
     &-box {
       width: @sign-input-box-size;
       border-radius: 10px;
-      border: 1px solid #EDEDED;
+      border: 1px solid #ededed;
       .padding(26px, tb);
       .padding(24px, lr);
       display: flex;
@@ -89,8 +93,8 @@
         .padding(0px);
         .flex(center, center);
         .margin(15px, l);
-        font-size:30px;
-        color:rgba(102,102,102,1);
+        font-size: 30px;
+        color: rgba(102, 102, 102, 1);
       }
       &-icon {
         width: 43px;
@@ -107,8 +111,8 @@
       min-width: 120px;
       .padding(24px, r);
       .flex(center, flex-end, row);
-      font-size:30px;
-      color:rgba(102,102,102,1);
+      font-size: 30px;
+      color: rgba(102, 102, 102, 1);
     }
     &-container {
       display: flex;
@@ -122,10 +126,10 @@
   }
   &-bar {
     .flex(center, space-between, row);
-    font-size:24px;
-    color:rgba(102,102,102,1);
+    font-size: 24px;
+    color: rgba(102, 102, 102, 1);
     &-active {
-      color:rgba(42,134,252,1);
+      color: rgba(42, 134, 252, 1);
     }
   }
 }
