--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -52,7 +52,8 @@
         width: 100%;
         height: 100%;
         background-repeat: no-repeat;
-        background-size: contain;
+        // background-size: contain;
+        background-size: 100% auto;
         background-position: center center;
       }
     }
