--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -273,12 +273,16 @@
 
 .component-modal-cancel-button {
   .config-button(#999999, @modal-button-height, @modal-button-height / 2,  30px);
-  .padding(86px, lr) !important;
+  min-width: 240px;
+  text-align: center;
+  // .padding(86px, lr) !important;
 }
 
 .component-modal-confirm-button {
   .config-button(@theme-color, @modal-button-height, @modal-button-height / 2,  30px);
-  .padding(86px, lr) !important;
+  min-width: 240px;
+  text-align: center;
+  // .padding(86px, lr) !important;
 }
 
 /**
