--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -471,11 +471,13 @@
       position: absolute;
       top: @product-header-height;
       width: 100%;
+      height: 100%;
 
       &-container {
         display: flex;
         flex-direction: column;
         flex: 1;
+        height: 100%;
       }
     }
   }
